--- a/app/src/style/globalStyle.css
+++ b/app/src/style/globalStyle.css
@@ -1,224 +1,3 @@
-html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font-weight: normal;
-  vertical-align: baseline;
-  background: transparent;
-}
-
-main, article, aside, figure, footer, header, nav, section, details, summary {
-  display: block;
-}
-
-/* Handle box-sizing while better addressing child elements:
-   http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
-html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit;
-}
-
-/* consider resetting the default cursor: https://gist.github.com/murtaugh/5247154 */
-/* Responsive images and other embedded objects */
-/* if you don't have full control over `img` tags (if you have to overcome attributes), consider adding height: auto */
-img,
-object,
-embed {
-  max-width: 100%;
-}
-
-/*
-   Note: keeping IMG here will cause problems if you're using foreground images as sprites.
-	In fact, it *will* cause problems with Google Maps' controls at small size.
-	If this is the case for you, try uncommenting the following:
-#map img {
-		max-width: none;
-}
-*/
-/* force a vertical scrollbar to prevent a jumpy page */
-html {
-  overflow-y: scroll;
-}
-
-/* we use a lot of ULs that aren't bulleted.
-	you'll have to restore the bullets within content,
-	which is fine because they're probably customized anyway */
-ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-
-a {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent;
-}
-
-del {
-  text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-  border-bottom: 1px dotted #000;
-  cursor: help;
-}
-
-/* tables still need cellspacing="0" in the markup */
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-}
-
-th {
-  font-weight: bold;
-  vertical-align: bottom;
-}
-
-td {
-  font-weight: normal;
-  vertical-align: top;
-}
-
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 1em 0;
-  padding: 0;
-}
-
-input, select {
-  vertical-align: middle;
-}
-
-pre {
-  white-space: pre;
-  /* CSS2 */
-  white-space: pre-wrap;
-  /* CSS 2.1 */
-  white-space: pre-line;
-  /* CSS 3 (and 2.1 as well, actually) */
-  word-wrap: break-word;
-  /* IE */
-}
-
-input[type="radio"] {
-  vertical-align: text-bottom;
-}
-
-input[type="checkbox"] {
-  vertical-align: bottom;
-}
-
-.ie7 input[type="checkbox"] {
-  vertical-align: baseline;
-}
-
-.ie6 input {
-  vertical-align: text-bottom;
-}
-
-select, input, textarea {
-  font: 99% sans-serif;
-}
-
-table {
-  font-size: inherit;
-  font: 100%;
-}
-
-small {
-  font-size: 85%;
-}
-
-strong {
-  font-weight: bold;
-}
-
-td, td img {
-  vertical-align: top;
-}
-
-/* Make sure sup and sub don't mess with your line-heights http://gist.github.com/413930 */
-sub, sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
-
-/* standardize any monospaced elements */
-pre, code, kbd, samp {
-  font-family: monospace, sans-serif;
-}
-
-/* hand cursor on clickable elements */
-.clickable,
-label,
-input[type=button],
-input[type=submit],
-input[type=file],
-button {
-  cursor: pointer;
-}
-
-/* Webkit browsers add a 2px margin outside the chrome of form elements */
-button, input, select, textarea {
-  margin: 0;
-}
-
-/* make buttons play nice in IE */
-button,
-input[type=button] {
-  width: auto;
-  overflow: visible;
-}
-
-/* scale images in IE7 more attractively */
-.ie7 img {
-  -ms-interpolation-mode: bicubic;
-}
-
-/* prevent BG image flicker upon hover
-   (commented out as usage is rare, and the filter syntax messes with some pre-processors)
-.ie6 html {filter: expression(document.execCommand("BackgroundImageCache", false, true));}
-*/
-/* let's clear some floats */
-.clearfix:after {
-  content: " ";
-  display: block;
-  clear: both;
-}
-
 .twitter--btn {
   border-radius: 4px;
   padding: 16px 24px;
@@ -795,215 +574,4 @@ input[type=button] {
   font-weight: 400;
   color: black;
 }
-
-@media all and (max-width: 900px) {
-  .body--header {
-    padding: 0 20px;
-  }
-  .body--header nav {
-    padding: 42px 0;
-  }
-  .body--header nav .nav--logo {
-    font-size: 1em;
-  }
-  .body--header .header--content {
-    padding-top: 15px;
-    margin-bottom: 40px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    gap: 45px;
-  }
-  .body--header .header--content .section-first {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 100%;
-    padding-right: 0;
-    gap: 10px;
-  }
-  .body--header .header--content .section-first .header--content-title p {
-    font-size: 35px;
-  }
-  .body--header .header--content .section-first .header--conntent-footer {
-    width: 100%;
-  }
-  .body--header .header--content .section-first .header-content-subinfo {
-    padding-right: 60%;
-  }
-  .body--header .header--content .section-second {
-    max-width: 100%;
-  }
-  .body--header .header--content .section-second img {
-    display: none;
-  }
-  .body--header .header--content .section-second .tablet {
-    display: block;
-  }
-  .body--content-features {
-    padding: 20px;
-  }
-  .body--content-features .features--title {
-    width: 60%;
-  }
-  .body--content-features .features--lists {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .body--content-features .feature--list {
-    width: 100%;
-  }
-  .body--content-customers {
-    padding: 20px;
-  }
-  .body--content-customers .customers--title {
-    width: 100%;
-  }
-  .body--content-customers .customers--lists .customer--list {
-    width: 100%;
-  }
-  .body--price {
-    padding: 20px;
-    gap: 20px;
-  }
-  .body--price .price-title {
-    text-align: center;
-    margin: 0;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
-  .body--price .price--app {
-    max-width: 100%;
-  }
-}
-
-@media all and (max-width: 639px) {
-  .twitter--btn {
-    width: 100%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .body--header {
-    padding: 0 20px;
-  }
-  .body--header nav {
-    padding: 42px 0;
-  }
-  .body--header nav .nav--logo {
-    font-size: 1em;
-  }
-  .body--header nav .nav--menu {
-    display: none;
-  }
-  .body--header nav .hamburger--menu {
-    display: block;
-  }
-  .body--header .header--content {
-    padding-top: 15px;
-    margin-bottom: 40px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: column-reverse;
-            flex-direction: column-reverse;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    gap: 45px;
-  }
-  .body--header .header--content .section-first {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 100%;
-    padding-right: 0;
-    gap: 10px;
-  }
-  .body--header .header--content .section-first .header--content-title p {
-    font-size: 35px;
-  }
-  .body--header .header--content .section-first .header--content-btn {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .body--header .header--content .section-first .header--conntent-footer {
-    width: 100%;
-  }
-  .body--header .header--content .section-first .header-content-subinfo {
-    padding-right: 0;
-  }
-  .body--header .header--content .section-second {
-    max-width: 100%;
-  }
-  .body--header .header--content .section-second img {
-    display: block;
-  }
-  .body--header .header--content .section-second .tablet {
-    display: none;
-  }
-  .body--content-features {
-    padding: 20px;
-  }
-  .body--content-features .features--title {
-    width: 60%;
-  }
-  .body--content-features .features--lists {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .body--content-features .feature--list {
-    width: 100%;
-  }
-  .body--content-customers {
-    padding: 20px;
-  }
-  .body--content-customers .customers--title {
-    width: 100%;
-  }
-  .body--content-customers .customers--lists {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .body--content-customers .customers--lists .customer--list {
-    width: 100%;
-  }
-  .body--price {
-    padding: 20px;
-    gap: 20px;
-  }
-  .body--price .price-title {
-    text-align: center;
-    margin: 0;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
-  .body--price .price--app {
-    max-width: 100%;
-  }
-  .body--footer footer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    padding: 20px;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    gap: 10px;
-  }
-}
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=globalStyle.css.map */
