--- a/app/src/style/style.scss
+++ b/app/src/style/style.scss
@@ -1,409 +1,225 @@
 @import "./reset.scss";
+@import "./globalStyle.scss";
 
-$global-font: "Inter",
-sans-serif;
-$blue-color: #1da1f2;
-$grey-font-color: #828282;
-$dark-blue-color: #1f7898;
 
-.twitter--btn {
-  border-radius: 4px;
-  padding: 16px 24px;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  background-color: $blue-color;
-  border: none;
-  color: white;
 
-  p {
-    font-size: 18px;
-    font-weight: 700;
-    text-align: center;
-  }
-}
+@media all and (max-width: 900px){
 
-.app--body {
-  display: flex;
-  flex-direction: column;
-  font-family: $global-font;
-  align-items: center;
-}
 
-.body--header {
-  padding: 0 140px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  background-color: #fbf8f3;
-
-  nav {
-    width: 100%;
-    max-width: 1200px;
-    padding: 42px 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-
-    .nav--logo {
-      font-style: italic;
-      font-weight: 600;
-
-      a {
-        color: $blue-color;
+  .body--header {
+    padding: 0 20px;
+  
+    nav {
+      padding: 42px 0;
+  
+      .nav--logo {
+        font-size: 1em;
       }
+  
     }
-
-    a {
-      text-decoration: none;
-      font-family: $global-font;
-      color: $grey-font-color;
-    }
-
-    .nav--menu {
-      display: flex;
-      flex-direction: row;
+  
+    .header--content {
+      padding-top: 15px;
+      margin-bottom: 40px;
+      flex-direction: column-reverse;
       align-items: center;
-      gap: 15px;
-    }
-  }
-
-  .header--content {
-    max-width: 1220px;
-    padding-top: 15px;
-    display: flex;
-    flex-direction: row;
-    // gap: 45px;
-
-    span {
-      color: $dark-blue-color;
-      font-weight: bold;
-    }
-
-    .section-first {
-      display: flex;
-      flex-direction: column;
-      padding-right: 13.2%;
-      width: 60%;
-
-      .header--content-title {
-        p {
-          font-size: 56px;
-          line-height: 120%;
-          font-weight: 700;
+      gap:45px;
+  
+  
+      .section-first {
+        flex-direction: column;
+        width: 100%;
+        padding-right: 0;
+        gap:10px;
+  
+        .header--content-title {
+          p {
+            font-size: 35px;
+          }
         }
+      
+  
+      .header--conntent-footer {
+        width: 100%;
+      }
+  
+      .header-content-subinfo {
+        padding-right: 60%;
       }
 
-      .header--content-info {
-        margin-bottom: 16px;
-
-        p {
-          color: $grey-font-color;
-          font-size: 18px;
-          font-style: normal;
-          font-weight: 400;
-          line-height: 170%;
-        }
-      }
-
-      .header--content-btn {
-        display: flex;
-        flex-direction: row;
-        gap: 25px;
-        align-items: center;
-        margin-bottom: 24px;
-
-        a {
-          text-decoration: none;
-        }
-      }
-    }
-
-    .header--conntent-footer {
-      margin-bottom: 12px;
-      height: 50px;
-
-      img {
-        margin-right: -25px;
-        transition: margin-right 0.5s, margin-top 0.2s;
-        transition-timing-function: linear;
-      }
-
-      img:hover {
-        margin-right: -5px;
-        margin-top: 2px;
-        height: 100%;
-      }
-    }
-
-    .header-content-subinfo {
-      color: $grey-font-color;
-      padding-right: 30%;
     }
 
     .section-second {
-      width: 40%;
-      padding-bottom: 40px;
-      text-align: end;
-
-      img {
-        width: 85%;
+      max-width: 100%;
+      img{display: none;}
+      .tablet{
+        display: block;
       }
     }
-  }
-}
-
-.body--content-features {
-  display: flex;
-  flex-direction: column;
-  max-width: 1200px;
-  margin: 50px 0;
-
-  .features--title {
-    width: 35%;
-    margin-bottom: 24px;
-
-    p {
-      font-size: 36px;
-      font-weight: 700;
     }
   }
 
-  .features--lists {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 24px;
-  }
-
-  .feature--list {
-    width: 45%;
-    border: 1px solid #c5c5c5;
-    border-radius: 5px;
-    padding: 25px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-
-    h5 {
-      font-size: 18px;
-      font-weight: 700;
-    }
-
-    .list--emoji {
-      font-size: 40px;
-    }
-
-    p {
-      color: #828282;
-      font-size: 18px;
-      line-height: 30px;
-    }
-  }
-}
-
-.body--content-customers {
-  width: 100%;
-  background-color: #d7f5f5;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  .customers {
-    margin: 50px 0;
-  }
-
-  .customers--title {
-    width: 35%;
-    margin-bottom: 40px;
-
-    p {
-      font-size: 36px;
-      font-weight: 700;
-    }
-  }
-
-  .customers--lists {
-    max-width: 1200px;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    gap: 12px;
-
-    .customer--list {
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-      background-color: white;
-      border-radius: 10px;
-      padding: 20px;
-      width: 28%;
-
-      h5 {
-        font-size: 18px;
-        font-weight: 700;
-      }
-
-      p {
-        color: #828282;
-        font-size: 18px;
-        line-height: 30px;
-      }
-    }
-
-    .customer--info {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      gap: 15px;
-
-      .user {
-        display: flex;
-        flex-direction: row;
-        gap: 15px;
-      }
-    }
-
-    .customer--list-footer {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-
-      .like-btn {
-        display: flex;
-        flex-direction: row;
-        gap: 13px;
-        align-items: center;
-      }
-    }
-  }
-
-}
-
-
-.body--price {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-width: 650px;
-  margin-bottom: 40px;
-
-  .price-title {
-    margin: 75px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    h5 {
-      font-size: 2rem;
-      font-weight: 700;
-    }
-
-    p {
-      color: #828282;
-      font-size: 18px;
-      line-height: 30px;
-      text-align: center;
-    }
-  }
-
-
-  .price--app {
-    border: 2px solid #ffad23;
-    border-radius: 10px;
-    background-color: #fbf8f3;
-    max-width: 65%;
-    padding: 24px;
-    display: flex;
-    flex-direction: column;
-
-    p {
-      color: #828282;
-      font-size: 18px;
-      line-height: 30px;
-    }
-
-    span {
-      color: black;
-      font-size: 2rem;
-      font-weight: bold;
-    }
-
-    .content-lists {
-      border-top: 1px solid rgba(46, 44, 44, .2);
-      border-bottom: 1px solid rgba(46, 44, 44, .2);
-      padding: 24px 0;
-      margin: 14px 0;
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-
-      p {
-        font-size: 1rem;
-      }
-
-      .content-list {
-        display: flex;
-        flex-direction: row;
-        gap: 15px;
-      }
-    }
-
-
-    .price--app-btn {
-      width: 100%;
-
-      .app-btn {
-        width: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-
-        p {
-          color: white;
-        }
-      }
-    }
-  }
-
-}
-
-.body--footer {
-  width: 100%;
-  background-color: #d7f5f5;
-
-  footer {
-    max-width: 1220px;
+  .body--content-features{
     padding: 20px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0 auto;
-
-    a {
-      text-decoration: none;
+    .features--title{
+      width: 60%;
+    }
+    .features--lists{
+      flex-direction: column;
     }
 
-   .nav--logo{
-     a{
-      font-style: italic;
-      font-weight: 600;
-      color: $blue-color;
-     }
-  
-   }
+    .feature--list{
+      width: 100%;
+    }
+  }
 
-    .nav--menu {
-      display: flex;
-      flex-direction: row;
-      gap: 24px;
-      p{
-        font-weight:600;
-        color: black;
+  .body--content-customers {
+    padding: 20px;
+    .customers--title{
+      width: 100%;
+    }
+    .customers--lists{
+
+      .customer--list{
+        width: 100%;
       }
     }
   }
+
+  .body--price{
+    padding: 20px;
+    gap:20px;
+    .price-title{
+      text-align: center;
+      margin: 0;
+      padding: 10px;
+      margin-bottom: 20px;
+    }
+    .price--app{
+      max-width: 100%;
+    }
+  }
+  
 }
+
+
+@media all and (max-width: 639px){
+
+  .twitter--btn{
+    width: 100%;
+    justify-content: center;
+  }
+
+  .body--header {
+    padding: 0 20px;
+  
+    nav {
+      padding: 42px 0;
+  
+      .nav--logo {
+        font-size: 1em;
+      }
+  
+      .nav--menu {
+        display: none;
+      }
+      .hamburger--menu {
+        display: block;
+    }
+    }
+  
+    .header--content {
+      padding-top: 15px;
+      margin-bottom: 40px;
+      flex-direction: column-reverse;
+      align-items: center;
+      gap:45px;
+  
+  
+      .section-first {
+        flex-direction: column;
+        width: 100%;
+        padding-right: 0;
+        gap:10px;
+  
+        .header--content-title {
+          p {
+            font-size: 35px;
+          }
+        }
+      
+        .header--content-btn{
+          flex-direction: column;
+        }
+  
+      .header--conntent-footer {
+        width: 100%;
+      }
+  
+      .header-content-subinfo {
+        padding-right: 0;
+      }
+
+    }
+
+    .section-second {
+      max-width: 100%;
+      img{display: block;}
+      .tablet{
+        display: none;
+      }
+    }
+    }
+  }
+
+  .body--content-features{
+    padding: 20px;
+    .features--title{
+      width: 60%;
+    }
+    .features--lists{
+      flex-direction: column;
+    }
+
+    .feature--list{
+      width: 100%;
+    }
+  }
+
+  .body--content-customers {
+    padding: 20px;
+    .customers--title{
+      width: 100%;
+    }
+    .customers--lists{
+      flex-direction: column;
+      .customer--list{
+        width: 100%;
+      }
+    }
+  }
+
+  .body--price{
+    padding: 20px;
+    gap:20px;
+    .price-title{
+      text-align: center;
+      margin: 0;
+      padding: 10px;
+      margin-bottom: 20px;
+    }
+    .price--app{
+      max-width: 100%;
+    }
+  }
+  .body--footer{
+    footer{
+      flex-direction: column;
+      padding: 20px;
+      align-items: flex-start;
+      gap:10px;
+    }
+  }
+  
+}
+
