--- a/app/src/style/globalStyle.css
+++ b/app/src/style/globalStyle.css
@@ -118,6 +118,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .body--header .header--content span {
@@ -133,8 +136,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-right: 13.2%;
-  width: 60%;
+  width: 48%;
+  padding-top: 40px;
 }
 
 .body--header .header--content .section-first .header--content-title p {
@@ -198,6 +201,7 @@
 }
 
 .body--header .header--content .section-second {
+  max-height: 750px;
   max-width: 45%;
 }
 
@@ -207,6 +211,7 @@
 
 .body--header .header--content .section-second img {
   width: 100%;
+  max-height: 100%;
 }
 
 .body--content-features {
@@ -241,11 +246,11 @@
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 24px;
+  gap: 40px;
 }
 
 .body--content-features .feature--list {
-  width: 45%;
+  width: 48.2%;
   border: 1px solid #c5c5c5;
   border-radius: 5px;
   padding: 25px;
@@ -290,12 +295,14 @@
 }
 
 .body--content-customers .customers {
+  max-width: 1200px;
   padding: 50px 0;
 }
 
 .body--content-customers .customers--title {
-  width: 35%;
   margin-bottom: 40px;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 
 .body--content-customers .customers--title p {
@@ -315,7 +322,7 @@
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  gap: 12px;
+  gap: 15px;
 }
 
 .body--content-customers .customers--lists .customer--list {
@@ -329,8 +336,8 @@
   gap: 12px;
   background-color: white;
   border-radius: 10px;
-  padding: 20px;
-  width: 28%;
+  padding: 26px 30px 30px 24px;
+  width: 388px;
 }
 
 .body--content-customers .customers--lists .customer--list h5 {
